@@ -959,11 +959,11 @@ ul.breadcrumb li ul.post-trail-categories li:first-child {
 
 /** === Navigation === ------------------------------------------------------ */
 /** Pagination Method ------------------------------------------------------- */
-.opus-primus-navigation-pagination {
+.navigation-pagination {
 	text-align: center;
 }
 
-.opus-primus-navigation-pagination ul {
+.navigation-pagination ul {
 	display: inline-block;
 }
 
@@ -985,7 +985,7 @@ ul.page-numbers li a {
 }
 
 ul.page-numbers li span.current {
-	background-color: #f5f5f5;
+	background-color: #c3c3c3;
 	border: 1px solid #efefef;
 	display: block;
 	float: left;
